[AMEND] fixed z-index issue with navbar on mobile

--- a/devhub/static/css/style.css
+++ b/devhub/static/css/style.css
@@ -116,7 +116,7 @@ h2, h3, h4, h5, h6 {
     top: 0;
     left: 0;
     bottom: 0;
-    z-index: 2;
+    z-index: 10;
     transform: translateX(-100%);
     transition: all .3s;
 }
